# renju

./: .gitignore  CMakeLists.txt  README.md
renju/: ChessSave.txt  TODOList.md  createmoves.cpp  createmoves.h  cutoffTest.h  debugChessEvaluate.cpp  debugChessEvaluate.h  define.cpp  define.h  evaluate.cpp  evaluate.h  gameover.cpp  hashsearch.cpp  hashsearch.h  makemove.cpp  makemove.h  printchessboard.cpp  renju.vcxproj  renju.vcxproj.filters  searchmove.cpp  searchmove.h  start.cpp  stopSearchSiblingsTest.h
template/acm-sigproc-latex/: chessMode2.eps  chessMode5.eps  chessModeL3.eps  chessModeL4.eps  chessModeS3.eps  chessModeS4.eps  sigproc-sp.bbl  sigproc-sp.blg  sigproc-sp.tex  sigproc.bib
